# Walkie-Talkie

./: .clippy.toml  .gitignore  Cargo.toml  Dockerfile  LICENSE.txt  README.md  Walkie-Talkie.kdev4  build.rs  crates.js  err.txt  flake.nix  help.html  settings.html  src-files.js
.cargo/: config.toml  package.py
.github/workflows/: docs.yml  rust.yml
app/: all.html  enum.CursorType.html  enum.DecorationMode.html  enum.Event.html  enum.SurfaceBackend.html  enum.ThemeOp.html  enum.WRequestResult.html  enum.WResponse.html  fn.to_handle.html  index.html  sidebar-items.js  struct.App.html  struct.Box.html  struct.Color.html  struct.Cursor.html  struct.Decoration.html  struct.String.html  struct.Surface.html  struct.SurfaceWrapper.html  struct.ThemeDefault.html  struct.Window.html  struct.void.html  trait.EventHandler.html  trait.NativeDecoration.html  trait.RenderWindow.html  trait.SurfaceBackend.html  trait.Theme.html  type.Blur.html
app/events/: enum.Event.html
common/: all.html  enum.SurfaceBackend.html  enum.WRequestResult.html  enum.WResponse.html  fn.from_handle.html  fn.to_handle.html  index.html  sidebar-items.js  struct.Color.html  struct.MacWrapper.html  struct.SurfaceWrapper.html  trait.SurfaceBackend.html
crates/android/: Cargo.toml
crates/android/src/: AndroidManifest.xml  android.rs
crates/api/: Cargo.toml
crates/app/: Cargo.toml  README.md  build.rs
crates/app/src/: app.rs  cocoa.rs  events.rs  gnome.rs  wayland.rs  winapi.rs
crates/app/src/platform/: cocoa.rs  gnome.rs  mod.rs  nt.rs  wayland.rs  winapi.rs  x11.rs
crates/app/src/platform/android/: README.md  mod.rs
crates/app/src/platform/apple/: macos.rs  mod.rs
crates/app/src/platform/bsd/: mod.rs
crates/app/src/platform/linux/: .wayland.rs.kate-swp  README.md  a.out  gnome.rs  libwayland.c  mod.rs  shared.rs  wayland.c  wayland.rs  x11.rs
crates/app/src/platform/liteos/: README.md
crates/app/src/platform/nt/: README.md  mod.rs  system.rs
crates/app/src/platform/redox/: REDOX.md  redox.rs
crates/app/src/platform/skiftos/: mod.rs
crates/app/tests/: connect_to_renderer.rs
crates/auth/: Cargo.toml
crates/common/: Cargo.toml  README.md
crates/dirty/: Cargo.toml  README.md  build.rs
crates/dirty/src/: .common.rs.kate-swp  common.rs  syscall.rs
crates/dirty/src/core/linux/: exit_a64.s  exit_x64.s
crates/dirty/src/core/macos/: exit.s
crates/dirty/src/core/nt/: window.c
crates/dirty/src/core/unix/: getenv.c  socket.c  thread.c
crates/logger/: Cargo.toml
crates/matrix_client_protocols/: Cargo.toml  README.md
crates/metal_renderer/: Cargo.toml
crates/metal_renderer/src/: renderer.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: renderer.rs
crates/vk_renderer/: Cargo.toml  README.md
crates/vk_renderer/src/: renderer.rs  wrapper.rs
crates/wt/: Cargo.toml  README.md
crates/wt/src/: main.rs  renderer.rs
crates/wt/walkie-talkie.xcodeproj/: project.pbxproj
dirty/: all.html  enum.WRequestResult.html  enum.WResponse.html  fn.as_u8_slice.html  fn.getenv.html  index.html  macro.exit.html  macro.format.html  macro.write.html  sidebar-items.js  static.FALSE.html  static.TRUE.html  struct.Box.html  struct.Color.html  struct.Socket.html  struct.SocketResponse.html  struct.String.html  struct.SurfaceWrapper.html  struct.Thread.html  struct.Vec.html  struct.void.html  trait.ToString.html  type.AnyFunction.html  type.f8.html
dirty/slice/: enum.GetDisjointMutError.html  fn.from_mut.html  fn.from_mut_ptr_range.html  fn.from_ptr_range.html  fn.from_raw_parts.html  fn.from_raw_parts_mut.html  fn.from_ref.html  fn.range.html  fn.try_range.html  index.html  struct.ArrayWindows.html  struct.ChunkBy.html  struct.ChunkByMut.html  struct.Chunks.html  struct.ChunksExact.html  struct.ChunksExactMut.html  struct.ChunksMut.html  struct.EscapeAscii.html  struct.Iter.html  struct.IterMut.html  struct.RChunks.html  struct.RChunksExact.html  struct.RChunksExactMut.html  struct.RChunksMut.html  struct.RSplit.html  struct.RSplitMut.html  struct.RSplitN.html  struct.RSplitNMut.html  struct.Split.html  struct.SplitInclusive.html  struct.SplitInclusiveMut.html  struct.SplitMut.html  struct.SplitN.html  struct.SplitNMut.html  struct.Windows.html  trait.Concat.html  trait.Join.html  trait.SliceIndex.html
dirty/str/: fn.from_boxed_utf8_unchecked.html  fn.from_raw_parts.html  fn.from_raw_parts_mut.html  fn.from_utf8.html  fn.from_utf8_mut.html  fn.from_utf8_unchecked.html  fn.from_utf8_unchecked_mut.html  index.html  struct.Bytes.html  struct.CharIndices.html  struct.Chars.html  struct.EncodeUtf16.html  struct.EscapeDebug.html  struct.EscapeDefault.html  struct.EscapeUnicode.html  struct.Lines.html  struct.LinesAny.html  struct.MatchIndices.html  struct.Matches.html  struct.ParseBoolError.html  struct.RMatchIndices.html  struct.RMatches.html  struct.RSplit.html  struct.RSplitN.html  struct.RSplitTerminator.html  struct.Split.html  struct.SplitAsciiWhitespace.html  struct.SplitInclusive.html  struct.SplitN.html  struct.SplitTerminator.html  struct.SplitWhitespace.html  (+4 more)
linker/: a64.ld
renderer/: all.html  enum.SurfaceBackend.html  index.html  sidebar-items.js  struct.Renderer.html
search.index/: 004af7da24.js  007a22eb7d3c.js  0090053fd008.js  011ddea096.js  013a390bb2f7.js  0183c6e073d0.js  01f3392cf098.js  0235ec00b9ed.js  0270fbb4e058.js  02780fab112a.js  029d03f951e6.js  02cc6978ca22.js  02ed97f8ea5f.js  03085aca6a.js  033d4f4c24.js  03454984f9fc.js  038569f14aad.js  03c9053f2358.js  042c9da1d1.js  0455e7ea686c.js  048b6f146e3d.js  051a53bc7c.js  056679e3ae07.js  05b4505b94.js  05ca77656267.js  067c5a87e3.js  06dd0f38b55a.js  06e9740b9dc8.js  0786aa1165d5.js  07edccaf90.js  08518d71f346.js  08a283c4da.js  0949f5215ee3.js  0951e81232a6.js  09ea399b4980.js  09ec057aab30.js  0a83def67aa1.js  0ac45be585.js  0adb98f0bd40.js  0ae1cc747b.js  (+426 more)
tools/: apple.py  package.py  tar.py  zig-cc
vk_renderer/: all.html  index.html  sidebar-items.js  struct.Renderer.html  struct.Wrapper.html
wt/: all.html  fn.app_loop.html  fn.main.html  index.html  sidebar-items.js  struct.MatrixClient.html
(+170 files in other folders)
