cargo-features = ["profile-rustflags"]

[workspace]
resolver = "2"
members = [
	"crates/app",
	"crates/wt",
	"crates/vk_renderer",
	"crates/dirty",
	#"crates/logger",
	#"crates/auth",
	#"crates/matrix_client_protocols",
	#"crates/gui",
]
default-members = ["crates/wt"]
version = "0.0.1"

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]
app = { path = "crates/app" }
vk_renderer = { path = "crates/vk_renderer" }
#logger = { path = "crates/logger" }
#auth = { path = "crates/auth" }
#gui = { path = "crates/gui" }
#api = { path = "crates/matrix_client_protocols" }
dirty = { path = "crates/dirty" }
# logging
log = "0.4.28"
# linux
wayland-client = "0.31.11"
wayland-protocols-experimental = "20250721.0.1"
#tikv-jemallocator = "0.6.1"
#dbus = "0.9.10"
# macos
objc2 = "0.6.3"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"
objc2-quartz-core = "0.3.2"
objc2-core-graphics = "0.3.2"
# android
ndk-sys = "0.6.0"

[workspace.dependencies.simple_logger]
version = "5.1.0"
default-features = false
features = []

[workspace.dependencies.wayland-protocols]
version = "0.32.9"
features = ["unstable", "client"]

[workspace.dependencies.ash]
version = "0.38.0"
default-features = false
features = ["debug", "loaded"]

# ---- Lints ----------------------

[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"

# ---- Profiles -------------------

[profile.dev]

[profile.release]
debug = "limited"
lto = "thin"
codegen-units = 1

# https://thunderbiscuit.github.io/uniffi-examples/build-workflows/optimizations.html
[profile.release-smaller]
inherits = "release"
opt-level = 'z'
lto = "fat"
codegen-units = 1
panic = 'abort'
strip = 'debuginfo'
