cargo-features = ["profile-rustflags"]

# =========================================================
# Workspace
# =========================================================

[workspace]
resolver = "2"

members = [
	"crates/app",
	"crates/wt",
	"crates/dirty",
	"crates/metal_renderer",
	"crates/vk_renderer",

	# Optional / WIP
	#"crates/logger",
	#"crates/auth",
	#"crates/matrix_client_protocols",
	#"crates/gui",
]

default-members = ["crates/wt"]

[workspace.package]
edition = "2024"
version = "0.0.1"
publish = false

# =========================================================
# Internal crates
# =========================================================

[workspace.dependencies]
app					= { path = "crates/app" }
dirty				= { path = "crates/dirty" }
vk_renderer			= { path = "crates/vk_renderer" }
metal_renderer		= { path = "crates/metal_renderer" }

# =========================================================
# Platform: macOS
# =========================================================

objc2				= "0.6.3"
objc2-app-kit		= { version = "0.3.2", features = ["NSMenu"] }
objc2-foundation	= "0.3.2"
objc2-quartz-core	= "0.3.2"
objc2-core-graphics	= "0.3.2"
objc2-metal			= "0.3.2"

# =========================================================
# Logging
# =========================================================

log = "0.4.28"

[workspace.dependencies.simple_logger]
version = "5.1.0"
default-features = false
features = []

# =========================================================
# Graphics
# =========================================================

[workspace.dependencies.ash]
version = "0.38.0"
default-features = false
features = [
	"debug",
	"loaded",
]

# =========================================================
# Platform: Windows
# =========================================================

[workspace.dependencies.windows-sys]
version = "0.61"

features = [
	"Win32_Foundation",
	"Win32_UI_WindowsAndMessaging",
]

# =========================================================
# Platform: Android
# =========================================================

ndk-sys = "0.6.0"

# =========================================================
# Platform: Linux
# =========================================================

# tikv-jemallocator = "0.6.1"
# dbus = "0.9.10"

# =========================================================
# Lints
# =========================================================

[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"

# =========================================================
# Profiles
# =========================================================

[profile.dev]

[profile.release]
debug = "limited"
lto = "thin"
codegen-units = 1

# Smaller binaries
# https://thunderbiscuit.github.io/uniffi-examples/build-workflows/optimizations.html
[profile.release-smaller]
inherits = "release"

opt-level = "z"
lto = "fat"
codegen-units = 1

panic = "abort"
strip = "debuginfo"
