[package]
name = "android"
version = "0.0.1"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
path = "src/android.rs"
doctest = false

[dependencies]
log.workspace = true
log-panics.workspace = true
env_logger.workspace = true
ndk-sys.workspace = true
#app.workspace = true
