[package]
name = "app"
version = "0.0.1"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
path = "src/app.rs"
doctest = false

[dependencies]
log.workspace = true
log-panics.workspace = true
ash.workspace = true
renderer.workspace = true
mouse_position.workspace = true
ctor.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
wayland-client.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
objc2-app-kit.workspace = true
objc2-foundation.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true
