[package]
name = "app"
version = "0.0.1"
edition.workspace = true
publish.workspace = true
authors = ["SCLorentz <sclorentz@proton.me>"]

[lints]
workspace = true

[lib]
path = "src/app.rs"
doctest = false

[dependencies]
log.workspace = true
simple_logger.workspace = true
ash.workspace = true
common.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
wayland-protocols.workspace = true
wayland-protocols-experimental.workspace = true
#dbus.workspace = true
wayland-client.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
objc2-app-kit.workspace = true
objc2-foundation.workspace = true
objc2-core-graphics.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true

# ---- Features -------------------

[features]
default = ["wayland"]
wayland = []
x11 = []
