[package]
name = "renderer"
version = "0.0.1"
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
path = "src/renderer.rs"
doctest = false

[dependencies]
log.workspace = true
ash.workspace = true
common.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit.workspace = true
objc2-foundation.workspace = true
objc2.workspace = true
objc2-quartz-core.workspace = true
