[package]
description = "SCLorentz's matrix client"
edition.workspace = true
name = "walkie-talkie"
version = "0.0.2"
publish.workspace = true
authors = ["SCLorentz <sclorentz@proton.me>"]

[lints]
workspace = true

[[bin]]
name = "wt"
path = "src/main.rs"

[dependencies]
log.workspace = true
app.workspace = true
dirty.workspace = true
simple_logger.workspace = true
ash.workspace = true
vk_renderer.workspace = true

#[target.'cfg(target_os = "linux")'.dependencies]
#tikv-jemallocator.workspace = true

# ---- Features -------------------

[features]
x11 = []
gnome = []
